# awesome-qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
1_basic/: CMakeLists.txt  resources.qrc
1_basic/module/: app.cppm  calculator.cppm
1_basic/src/: main.cpp
1_basic/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
